force-app/main/default/objects/Property__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Date on which this Property was acquired by DPEG (or the applicable GP entity). Populated at close of the acquisition transaction.</description>
    <inlineHelpText>Enter the closing date on which the property was acquired.</inlineHelpText>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>