force-app/main/default/objects/Property__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <description>Average daily rate for a hospitality asset, carried from Lead.ADR__c at conversion. Hospitality only.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>ADR</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>