force-app/main/default/objects/Property__c/fields/Annual_NOI__c.field-meta.xml
<CustomField>
    <fullName>Annual_NOI__c</fullName>
    <description>Net Operating Income as reported by the seller (the seller&apos;s number, not DPEG&apos;s underwritten NOI). Entered from the Offering Memorandum.</description>
    <label>Annual NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>