force-app/main/default/objects/Property__c/fields/Cap_Rate_Asking__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate_Asking__c</fullName>
    <label>Cap Rate Asking</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>