force-app/main/default/objects/Property__c/fields/Comp_Monthly_Visits__c.field-meta.xml
<CustomField>
    <fullName>Comp_Monthly_Visits__c</fullName>
    <label>Comp Monthly Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>