force-app/main/default/objects/Property__c/fields/Comp_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comp_Sales__c</fullName>
    <label>Comp Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>