force-app/main/default/objects/Property__c/fields/CoStar_Asking_Rent_PSF__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Asking_Rent_PSF__c</fullName>
    <description>CoStar asking rent per square foot for this property. Distinct from Market_Rent_PSF__c: asking is what the landlord wants, market is what the market clears at. Manually entered today - no live CoStar connection exists (§18.4 "Integration Off" fallback). Owner: CoStar.</description>
    <label>Asking Rent PSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>