force-app/main/default/objects/Property__c/fields/CoStar_Exit_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Exit_Cap_Rate__c</fullName>
    <description>CoStar projected exit cap rate for this property. Exit cap only - "cap compression" (a comparison of exit vs. entry/market cap) is deliberately not built here because the FSD does not define its base, and a stored field with an unstated definition would be a confident wrong answer. Manually entered today - no live CoStar connection exists (§18.4 "Integration Off" fallback). Owner: CoStar.</description>
    <label>CoStar Exit Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>