force-app/main/default/objects/Property__c/fields/CoStar_Fetch_Status__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Fetch_Status__c</fullName>
    <description>Twin of Placer_Fetch_Status__c for the CoStar block. Not Synced is the default for a manually-entered property (indistinguishable from "never attempted" otherwise); Success/Error are reserved for the day an ASB spoke performs a real fetch.</description>
    <label>CoStar Fetch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>