force-app/main/default/objects/Property__c/fields/CoStar_Location_Score__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Location_Score__c</fullName>
    <description>CoStar location quality score for this property. Manually entered today - no live CoStar connection exists (§18.4 "Integration Off" fallback). Owner: CoStar.</description>
    <label>CoStar Location Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>