force-app/main/default/objects/Property__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County name. Used for property tax research and CAM calculations in later modules.</description>
    <label>County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>