force-app/main/default/objects/Property__c/fields/Days_On_Market_Avg__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Market_Avg__c</fullName>
    <label>Days On Market Avg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>