force-app/main/default/objects/Property__c/fields/Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance__c</fullName>
    <description>Outstanding loan balance secured against this Property as of the most recent update. Used together with Valuation__c to calculate Loan_to_Value__c.</description>
    <inlineHelpText>Enter the current outstanding balance on the loan secured by this property.</inlineHelpText>
    <label>Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>