force-app/main/default/objects/Property__c/fields/Loan_to_Value__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value__c</fullName>
    <description>Loan-to-value ratio for this Property, expressed as a percentage of Valuation__c represented by Loan_Balance__c (e.g. 65.00 for 65%). Entered/maintained directly, not a formula field.</description>
    <inlineHelpText>Enter the loan-to-value percentage, e.g. 65.00 for 65%.</inlineHelpText>
    <label>Loan to Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>