force-app/main/default/objects/Property__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <description>Total lot or parcel size in square feet. Entered from the Offering Memorandum.</description>
    <label>Lot Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>