force-app/main/default/objects/Property__c/fields/Lot_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size_Acres__c</fullName>
    <description>Lot size in acres, carried from Lead.Lot_Size_Acres__c at conversion. The existing Lot_Size__c field is square feet, entered from the Offering Memorandum by an analyst — this field is NOT derived from that one, and conversion never writes to Lot_Size__c (deriving SF from acres is forbidden by this module's anti-hallucination rules).</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email. Distinct from Lot Size (which is square feet, from the OM).</inlineHelpText>
    <label>Lot Size (Acres)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>