force-app/main/default/objects/Property__c/fields/Market_Rent_PSF__c.field-meta.xml
<CustomField>
    <fullName>Market_Rent_PSF__c</fullName>
    <label>Market Rent PSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>