force-app/main/default/objects/Property__c/fields/Monthly_Visits__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Visits__c</fullName>
    <description>Placer.ai (stub)</description>
    <label>Monthly Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>