force-app/main/default/objects/Property__c/fields/Occupancy_Pct__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Pct__c</fullName>
    <description>Reported occupancy percentage of THIS subject asset (e.g., 88.00 for 88%), carried from Lead.Occupancy_Pct__c at conversion. Deliberately distinct from Occupancy_Rate_Market__c, which is the market benchmark (Placer/CoStar lineage) — do not merge these two fields; each captures a different thing.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email. Distinct from the Occupancy Rate Market benchmark field.</inlineHelpText>
    <label>Occupancy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>