force-app/main/default/objects/Property__c/fields/Occupancy_Rate_Market__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Rate_Market__c</fullName>
    <label>Occupancy Rate Market</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>