force-app/main/default/objects/Property__c/fields/Peak_Hour__c.field-meta.xml
<CustomField>
    <fullName>Peak_Hour__c</fullName>
    <label>Peak Hour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>