force-app/main/default/objects/Property__c/fields/Placer_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Placer_Data_Source__c</fullName>
    <description>Provenance label for the Placer.ai block on this property - Manual (typed by a user) or Integrated (written by an ASB spoke). Deliberately has NO consumer today: nothing branches on it, and it should not until the spoke exists. Its value matters the day the integration lands, when a human can tell a typed number from a fetched one at a glance.</description>
    <label>Placer Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>