force-app/main/default/objects/Property__c/fields/Placer_Fetch_Status__c.field-meta.xml
<CustomField>
    <fullName>Placer_Fetch_Status__c</fullName>
    <label>Placer Fetch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>