force-app/main/default/objects/Property__c/fields/Placer_Last_Synced_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Placer_Last_Synced_DateTime__c</fullName>
    <description>When the Placer.ai block on this property was last refreshed. Manually entered today - no live Placer.ai connection exists (§18.4 "Integration Off" fallback); the day an ASB spoke lands it stamps this field automatically. Not to be confused with the unrelated, no-longer-orphaned Opportunity.Placer_Last_Synced_DateTime__c, which belongs to the separate Placer/CoStar Sync card feature.</description>
    <label>Placer Last Synced</label>
    <type>DateTime</type>
</CustomField>