force-app/main/default/objects/Property__c/fields/Placer_National_Rank__c.field-meta.xml
<CustomField>
    <fullName>Placer_National_Rank__c</fullName>
    <description>Placer.ai national visit-traffic rank for this property. Manually entered today - no live Placer.ai connection exists (§18.4 "Integration Off" fallback). Owner: Placer.ai.</description>
    <label>National Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>