force-app/main/default/objects/Property__c/fields/Placer_State_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Placer_State_Percentile__c</fullName>
    <description>Placer.ai state visit-traffic percentile for this property. Manually entered today - no live Placer.ai connection exists (§18.4 "Integration Off" fallback). Owner: Placer.ai.</description>
    <label>Placer State Percentile</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>