force-app/main/default/objects/Property__c/fields/Property_Package__c.field-meta.xml
<CustomField>
    <fullName>Property_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Property Package this Property belongs to, carried forward from the converting Lead's Property_Package__c. Blank on every ordinary single-property deal.</description>
    <inlineHelpText>Do not edit directly. Set by LeadConvertService at conversion, from the converting Lead's Property Package.</inlineHelpText>
    <label>Property Package</label>
    <referenceTo>Property_Package__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>