force-app/main/default/objects/Property__c/fields/Seller_Entity__c.field-meta.xml
<CustomField>
    <fullName>Seller_Entity__c</fullName>
    <description>Name of the selling entity, as quoted in the broker email and carried from Lead.Seller_Entity__c at conversion. Deliberately Text, not a lookup — there is no Seller object, and this is a free-text name as stated by the broker, not a reference to a Salesforce record. Per ARCHITECTURE.md §1 rule 9's Text exception.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Seller Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>