force-app/main/default/objects/Property__c/fields/SharePoint_Folder_Error__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_Error__c</fullName>
    <description>Durable failure surface for the SharePoint deal-folder callout — the HTTP status/body or exception message from the most recent failed attempt. Blank does not mean nothing was ever attempted; check SharePoint_Folder_Status__c for that.</description>
    <inlineHelpText>Populated by DealFolderService/DealFolderSweepBatch on a failed folder-create callout.</inlineHelpText>
    <label>SharePoint Folder Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>