force-app/main/default/objects/Property__c/fields/SharePoint_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_ID__c</fullName>
    <description>Graph drive item id of this property's SharePoint deal folder. Non-blank is the idempotency guard DealFolderService checks before making any callout — a populated value means the folder already exists and the sweep/trigger must not create a second one.</description>
    <label>SharePoint Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>