force-app/main/default/objects/Property__c/fields/SharePoint_Folder_Status__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_Status__c</fullName>
    <description>State of the SharePoint deal-folder creation for this property. This is DealFolderSweepBatch's work queue field, not bookkeeping — the sweep selects rows in Pending/Failed and leaves Created/Skipped alone.</description>
    <label>SharePoint Folder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>