force-app/main/default/objects/Property__c/fields/SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_URL__c</fullName>
    <description>webUrl of this property's SharePoint deal folder, returned by the Graph API create-folder callout. Blank until DealFolderService successfully creates (or finds, via conflictBehavior "rename") the folder.</description>
    <label>SharePoint Folder URL</label>
    <type>Url</type>
</CustomField>