force-app/main/default/objects/Property__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>Total building Gross Leasable Area (GLA) in square feet. Entered from the Offering Memorandum.</description>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>