force-app/main/default/objects/Property__c/fields/Trade_Area_Population__c.field-meta.xml
<CustomField>
    <fullName>Trade_Area_Population__c</fullName>
    <label>Trade Area Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>