force-app/main/default/objects/Property__c/fields/Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Count__c</fullName>
    <description>Number of units, or hotel keys for hospitality assets, carried from Lead.Unit_Count__c at conversion.</description>
    <inlineHelpText>Units, or hotel keys for hospitality. Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>