force-app/main/default/objects/Property__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <description>Current estimated valuation of this Property (e.g. from appraisal or internal underwriting), distinct from Asking_Price__c which is the Offering Memorandum listed asking price. Used together with Loan_Balance__c to calculate Loan_to_Value__c.</description>
    <inlineHelpText>Enter the property's current estimated valuation.</inlineHelpText>
    <label>Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>