force-app/main/default/objects/Property__c/fields/Visitor_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Demographics__c</fullName>
    <label>Visitor Demographics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>