force-app/main/default/objects/Property__c/fields/WALT_Years__c.field-meta.xml
<CustomField>
    <fullName>WALT_Years__c</fullName>
    <description>Weighted average lease term remaining, in years, carried from Lead.WALT_Years__c at conversion.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>WALT (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>