force-app/main/default/objects/Property__c/fields/Year_Renovated__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated__c</fullName>
    <description>Year the building was most recently renovated, carried from Lead.Year_Renovated__c at conversion.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Year Renovated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>