force-app/main/default/objects/Property__c/fields/YoY_Growth__c.field-meta.xml
<CustomField>
    <fullName>YoY_Growth__c</fullName>
    <label>YoY Growth</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>