force-app/main/default/objects/Property__c/fields/Zoning__c.field-meta.xml
<CustomField>
    <fullName>Zoning__c</fullName>
    <description>Zoning designation for the property, carried from Lead.Zoning__c at conversion.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Zoning</label>
    <length>100</length>
    <type>Text</type>
</CustomField>